# SuperMedicine

./: .coverage  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cli.py  EXTERNAL_PROJECT_ANALYSIS.md  FUNCTION_MAP.md  INSTALL.md  Install.py  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  REFACTORING_PLAN.md  REQUIREMENTS_TRACEABILITY.md  SECURITY.md  SECURITY_HARDENING_CHECKLIST.md  THIRD_PARTY_NOTICES.md  Uninstall.py  WEB_INTERFACE_PLAN.md  cli.py  cli_entry.py  failure_inventory.md  feature_manifest.json  gui_entry.py  gui_standalone.py  install.json  install.py  install_entry.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  uninstall_entry.py
.github/workflows/: ci.yml
.pyinstaller-spec/: SuperMedicine.spec
.supermedicine/: config.yaml
.supermedicine/policies/: default.yaml
Architecture/: Beta0.4.2ShortTermPlan.md  DebugBugFixPlan.md  DebugReviewTaskLedger.md  ExecutionRoadmap.md  FunctionMapASTInventory.md  MULTI_AGENT_STATUS.md  MaintainerRepositoryReading.md  OptimizationAudit.md  PhaseImplementationPlan.md  PlatformIntegrationAudit.md  RepositoryOptimizationAudit.md  WorkspaceTuiRagGuide.md
adapters/: __init__.py  base_adapter.py
adapters/claude_code/: SKILL.md  __init__.py  adapter.py
adapters/opencode/: __init__.py  adapter.py  plugin.json
adapters/standalone/: __init__.py  adapter.py
agents/: __init__.py  alpha_agent.py  base_agent.py  beta_agent.py  checkpoint.py  delta_agent.py  gamma_agent.py  orchestrator.py  roles.py  state_machine.py
cli/: __init__.py  helpers.py  logging_setup.py  parser.py
cli/commands/: __init__.py  execution.py  experience.py  experiment.py  llm.py  llm.pyi  log.py  paper.py  paper.pyi  permission.py  research.py  self_evolve.py  self_evolve.pyi  system.py  tool.py  tool.pyi  tools.py  workspace.py
core/: __init__.py  application.py  config_center.py  dialog_history.py  effect.py  effect.pyi  event_bus.py  experience.py  experiment_guide.py  experiment_protocols.py  kernel.py  kernel_constants.py  kernel_llm_chat.py  kernel_plugin_select.py  llm_client.py  llm_manager.py  log_report.py  log_report_handler.py  log_report_models.py  log_severity.py  log_severity.pyi  operation_guard.py  path_safety.py  plugin_registry.py  rag_service.py  redaction.py  redaction.pyi  runtime_capabilities.py  runtime_paths.py  runtime_pipeline.py  secure_files.py  self_evolution.py  serialization.py  session_manager.py  time_utils.py  token_tracker.py  workspace.py  workspace_tool_models.py  workspace_tool_spec.py  workspace_tool_templates.py  (+2 more)
core/database/: __init__.py  database.py  migrations.py  repository.py
core/llm_providers/: __init__.py  base.py  config.py  openrouter.py  openrouter.pyi
core/paper_import/: __init__.py  contracts.py  enrichment.py  errors.py  importer.py  models.py  models.pyi
core/services/: __init__.py  adapter.py  adapter.pyi  agent_harness.py  agent_harness.pyi  execution.py  experience_evolution.py  experience_evolution.pyi  experiment_tool.py  llm.py  llm.pyi  paper_rag.py  paper_rag.pyi  permission_log_system.py  permission_log_system.pyi  research.py  result.py  system.py  workspace.py  workspace.pyi
core/tui/: __init__.py  app.py  app.tcss  bridge.py  compat.py  content_pane.py  dialog_history.py  i18n.py  kernel_output.py  menu_screens.py  nav_widgets.py  opentui_runtime.mjs  opentui_runtime.py  permissions.py  preview_artifact.py  prompt_input.py  resources.py  service_bridge.py  state.py  status_helpers.py  status_helpers.pyi  stream_capture.py  support.py  types.py
core/web/: __init__.py  desktop.py  errors.py  routes.py  runtime.py  security.py  server.py
docs/api/: README.md
docs/architecture/: ARCHITECTURE.md  FUNCTION_MAP.md  README.md
docs/archive/: Beta0.4.2ShortTermPlan.md  DebugBugFixPlan.md  DebugReviewTaskLedger.md  ExecutionRoadmap.md  FunctionMapASTInventory.md  MaintainerRepositoryReading.md  PhaseImplementationPlan.md  PlatformIntegrationAudit.md  README.md  REFACTORING_PLAN.md  RepositoryOptimizationAudit.md  WorkspaceTuiRagGuide.md
docs/examples/: README.md
docs/guides/: INSTALL.md  architecture.md  getting-started.md
docs/maintainers/: README.md  entrypoints.md  feature-parity.md  human-maintainer-rebuild.md  human-maintenance-baseline.json  human-maintenance-budget.json  human-maintenance.md  maintenance-backlog.md  quality-gates.md  repository-map.md
docs/references/: README.md
installer/: __init__.py  component_installer.py  entrypoint.py  exe_release.py  gui_installer.py
permission/: __init__.py  access_mode.py  audit.py  default_policy.yaml  engine.py  policy.py  prompt_generator.py  redaction.py
plugins/: __init__.py  base_plugin.py
plugins/experiments/: cell_culture_basic.yaml  western_blot_basic.yaml
plugins/figure/: __init__.py  audit.py  check.py  export.py  layout.py  plugin.yaml  presentation.py  profile.py  qa.py  runner.py  style.py  tool.yaml
plugins/harness/: __init__.py  checkpoint_verifier.py  main.py  monitor.py  (+1 more)
scripts/: packaging_hooks.py
spec-pyinstaller/: SuperMedicine.spec
tests/: __init__.py  conftest.py  test_adapters.py  test_agents_full.py  test_agents_unit.py  test_application.py  test_application_service_boundaries.py  test_application_services.py  test_audit.py  test_backward_compatibility.py  test_beta042_release_validation.py  test_checkpoint.py  test_checkpoint_full.py  test_checkpoint_verifier.py  test_claude_code_adapter.py  test_cli_facade_slim.py  test_component_installer.py  test_config_center.py  test_core_convergence.py  test_custom_provider.py  test_database.py  test_database_full.py  test_database_integration.py  test_desktop_runtime.py  test_effect.py  test_event_bus.py  test_experience_cli.py  test_experience_full.py  test_experience_storage.py  test_experiment_cli.py  test_experiment_full.py  test_experiment_guide.py  test_experiment_log_integration.py  test_experiment_wb_plugin.py  test_figure_boundaries.py  test_install_service.py  test_installer.py  test_installer_entrypoint.py  test_installer_exe_release.py  test_integration.py  (+72 more)
(+150 files in other folders)
