[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supermedicine"
version = "0.2.0b0"
description = "Modular medical research Agent with RAG and Harness"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]
# Optional formal R/rpy2 survival backend. Also requires a local R installation
# with the R survival package available.
r = [
    "rpy2>=3.5",
]

[project.scripts]
supermedicine = "Cli:main"

[tool.setuptools]
py-modules = ["Cli", "Install"]

[tool.setuptools.packages.find]
include = ["core*", "permission*", "agents*", "plugins*", "adapters*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--basetemp=.pytest-tmp"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".supermedicine/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
