[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supermedicine"
version = "0.4.2b0"
description = "Modular Medical Research Agent with RAG and Harness"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SuperMedicine contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.7,<15",
    "textual>=0.79,<2",
]

[project.urls]
Homepage = "https://github.com/KarasawaYikiho/SuperMedicine"
Repository = "https://github.com/KarasawaYikiho/SuperMedicine"
"Bug Tracker" = "https://github.com/KarasawaYikiho/SuperMedicine/issues"

[project.optional-dependencies]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "types-PyYAML>=6.0",
]
# Optional formal R/rpy2 survival backend. Also requires a local R installation
# with the R survival package available.
r = [
    "rpy2>=3.5",
]
figure = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "Pillow>=10.0",
    "scipy>=1.10",
    "SciencePlots>=2.1",
    "pypdf>=4.0",
]
# Platform adapter packages are shipped for backwards compatibility, but they
# are optional integration surfaces layered around the standalone core.
platform-adapters = []

[project.scripts]
supermedicine = "Cli:main"

[tool.setuptools]
py-modules = ["Cli", "Uninstall"]

[tool.setuptools.package-data]
permission = ["default_policy.yaml"]
core = ["tui/app.tcss", "web/frontend/*"]
plugins = ["**/plugin.yaml", "**/*.yaml", "**/*.R"]
adapters = ["opencode/plugin.json", "opencode/skills/*.md", "opencode/agents/*.md", "claude_code/SKILL.md"]
installer = ["resources/*.json", "resources/*.md", "resources/*.txt"]

[tool.setuptools.packages.find]
include = ["core*", "permission*", "agents*", "plugins*", "adapters*", "installer*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-p no:cacheprovider"
markers = [
    "core: standalone core tests that must not require OpenCode/Claude Code runtimes",
    "adapter: optional platform adapter contract tests",
    "opencode: optional OpenCode integration tests",
    "claude_code: optional Claude Code integration tests",
]

[tool.ruff]
exclude = [".pytest-tmp", ".pytest_tmp"]

[tool.mypy]
exclude = "^build/|\\.pytest-tmp|\\.pytest_tmp"

[[tool.mypy.overrides]]
module = [
    "rpy2",
    "rpy2.*",
    "textual",
    "textual.*",
    "yaml",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".supermedicine/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
